add_subdirectory(Multiplayer)

# Client dependencies
file(GLOB SRC_COMMON_CLIENT CONFIGURE_DEPENDS ${SRC_COMMON_MULTIPLAYER} *.cpp)
message(STATUS "SRC_COMMON_CLIENT: ${SRC_COMMON_CLIENT}")
set(SRC_COMMON_CLIENT ${SRC_COMMON_CLIENT} PARENT_SCOPE)

# Server dependencies
file(GLOB SRC_COMMON_SERVER CONFIGURE_DEPENDS ${SRC_COMMON_MULTIPLAYER} Object.cpp)
message(STATUS "SRC_COMMON_SERVER: ${SRC_COMMON_SERVER}")
set(SRC_COMMON_SERVER ${SRC_COMMON_SERVER} PARENT_SCOPE)
